--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html, body {
   padding: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: var(--text-color);
-  background: linear-gradient(var(--background-color), url('support-informatique.jpg') no-repeat center center fixed); /* Assurez-vous que le chemin est correct ici */
+  background: linear-gradient(rgba(30, 30, 30, 0.85), rgba(30, 30, 30, 0.85)), url('support-informatique.jpg') no-repeat center center fixed;
   background-size: cover;
   display: flex;
   flex-direction: column;
